--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
