--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3"
