--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.10",
     "@mui/x-data-grid": "^6.15.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
